tests/negative/gold/static5-test.gold
tests/negative/static5-test.toit:7:10: error: Constructors can't be static
  static constructor:
         ^~~~~~~~~~~
Compilation failed
